# langchain-gemini-lab

./: .gitignore  Agent_Tool_Stock.py  Agent_Tool_Stock_streaming.py  Deep_Agent_Example.py  Deep_Agent_Example_RAG.py  Deep_Agent_Gradio_RAG.py  Deep_Agent_Gradio_RAG_localLLM.py  LocalLlama_test.py  LocalQwenQuantization_mlx_test.py  Super_Agent.py  Super_Agent_V2.py  backend_server_LLM.py  backend_server_LLM_Advanced_MCP.py  backend_server_LLM_MCP.py  backend_server_LLM_gemini.py  check_model.py  graph_agent_about_stock.py  graph_agent_multitool.py  graph_agent_multitool_groq.py  graph_agent_multitool_reflect.py  graph_agent_visualized.py  main.py  pyproject.toml  rag_demo.py  rag_pdf.py  rag_pdf_history.py  rag_pdf_history_jina.py  rag_websearch_history.py  server.py  server2.py  stock_mcp_server.py
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  index.css  main.jsx
